--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype html>
 <html class="no-js" lang="">
 	<head>
 		<meta charset="utf-8">
@@ -27,3 +28,16 @@
 						<li><a href="contact.html">Contact</a></li>
 						</ul>
 
+		<h1>Home</h1>
+			 <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
+			 <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
+			 <script src="js/plugins.js"></script>
+		
+			 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+			 <script>
+				 window.ga=function(){ga.q.push(arguments)};ga.q=[];ga.l=+new Date;
+				 ga('create','UA-XXXXX-Y','auto');ga('send','pageview')
+		</script>
+		<script src="https://www.google-analytics.com/analytics.js" async defer></script>
+	</body>
+</html>
